# stove_controller

./: .gitignore  CMakeLists.txt  README.md
src/: common.h  main.c  state.c  state.h
src/lib/estyma/: ct2.c  estyma.h
src/lib/kty/: 81_210.c  kty.h
src/lib/lcd_1602_i2c/: lcd_1602_i2c.c  lcd_1602_i2c.h
src/lib/mcp3208/: mcp3208.c  mcp3208.h
src/lib/ntc/: ntc.h  ntc10k.c
src/lib/pt/: pt.h  pt1000.c
tests/: CMakeLists.txt  potential_difference.cc  test.cc
tests/lib/: estyma.cc  kty.cc  ntc.cc  pt.cc
